--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ardhi/bajo-db#readme",
   "dependencies": {
+    "@tryghost/nql": "^0.11.0",
     "knex": "^2.4.2"
   }
 }
