--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "homepage": "https://github.com/ardhi/bajo-db#readme",
   "dependencies": {
-    "@tryghost/nql": "^0.11.0",
-    "knex": "^2.4.2"
+    "@tryghost/nql": "^0.11.0"
   }
 }
