--- a/bajo/config.json
+++ b/bajo/config.json
@@ -1,6 +1,7 @@
 {
   "connections": [],
   "dependencies": [],
+  "mergeProps": ["connections"],
   "defaults": {
     "property": {
       "text": {
