--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bajo-db",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "Database for Bajo Framework",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ardhi/bajo-db#readme",
   "dependencies": {
-    "@tryghost/nql": "^0.11.0"
+    "@tryghost/nql": "^0.11.0",
+    "joi": "^17.10.1"
   }
 }
