--- a/bajo/config.json
+++ b/bajo/config.json
@@ -15,6 +15,12 @@
       "limit": 25,
       "maxLimit": 200,
       "sort": ["dt:-1", "updatedAt:-1", "updated_at:-1", "createdAt:-1", "createdAt:-1", "ts:-1", "username", "name"]
+    },
+    "idField": {
+      "type": "string",
+      "maxLength": 50,
+      "required": true,
+      "index": { "type": "primary" }
     }
   }
 }
